change name of main.html

--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<link href="css/site.css" rel="stylesheet" type="text/css"/>
 		<link rel="shortcut icon" type="image/x-icon" href="images/titleicon.gif" />
 		<title>Daydream Family Dentistry</title>
 	</head>
 	<body>
 		<header>
-			<img src="images/logo.gif" />
+			<img class="logo" src="images/logo.gif" />
 			<nav>
 				<a href="">Home</a>
-				<a href="">Promotions</a>
-				<a href="">About The Doctors</a>
+				<a href="">About The Dentists</a>
 			</nav>
 		</header>
+
 	</body>
 </html>
