adding more content barebones

--- a/index.html
+++ b/index.html
@@ -7,12 +7,35 @@
 	</head>
 	<body>
 		<header>
-			<img class="logo" src="images/logo.gif" />
+			<div id="imageAndAddress">
+				<img class="logo" src="images/logo.gif" />
+				<span id="address">555 something ln weslaco,tx 77777</span>
+			</div>
 			<nav>
-				<a href="">Home</a>
-				<a href="">About The Dentists</a>
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="dentists.html">Meet The Staff</a></li>
+				</ul>
 			</nav>
 		</header>
+
+		<div id="mainBody">
+			<div>
+				<img src="images/buldingfront.jpg">
+				<p>Building address</p>
+			</div>
+			<div>
+				<h2>Services Offered</h2>
+			</div>
+			<div>
+				We take Medicaid and CHIPS
+			</div>
+			<div>
+				<h3>Contact Us</h3>
+				<p>Address</p>
+				<p>Phone Number</p>
+			</div>
+		</div>
 
 	</body>
 </html>
